[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/forge_slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/forge_window.gd" type="Script" id=2]

[node name="ForgeWindow" type="ColorRect"]
anchor_right = 1.156
anchor_bottom = 0.978
margin_right = -1279.68
margin_bottom = -584.16
rect_min_size = Vector2( 200, 120 )
script = ExtResource( 2 )

[node name="SlotLayout" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -26.0

[node name="Base" parent="SlotLayout" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 94.0
accepted_item_type = "Base"

[node name="Label" type="Label" parent="SlotLayout/Base"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 17.0
margin_top = 51.0
margin_right = 57.0
margin_bottom = 65.0
mouse_filter = 1
text = "BASE"

[node name="Barrel" parent="SlotLayout" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_right = 132.0
margin_bottom = 94.0
accepted_item_type = "Barrel"

[node name="Label2" type="Label" parent="SlotLayout/Barrel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = 54.0
margin_right = 64.0
margin_bottom = 68.0
mouse_filter = 1
text = "BARREL"

[node name="Ammo" parent="SlotLayout" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_right = 200.0
margin_bottom = 94.0
accepted_item_type = "Ammo"

[node name="Label3" type="Label" parent="SlotLayout/Ammo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 18.0
margin_top = 51.0
margin_right = 62.0
margin_bottom = 65.0
mouse_filter = 1
text = "AMMO"

[node name="ForgeButton" type="Button" parent="."]
margin_left = 45.0
margin_top = 98.0
margin_right = 151.0
margin_bottom = 118.0
disabled = true
text = "FORGE TURRET"

[connection signal="item_state_changed" from="SlotLayout/Base" to="." method="_on_Base_item_state_changed"]
[connection signal="item_state_changed" from="SlotLayout/Barrel" to="." method="_on_Barrel_item_state_changed"]
[connection signal="item_state_changed" from="SlotLayout/Ammo" to="." method="_on_Ammo_item_state_changed"]
[connection signal="pressed" from="ForgeButton" to="." method="_on_ForgeButton_pressed"]
